@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - Improved performance of the matrix solver determining valid free items (thanks RSBat!)
   Bugfixes:
     - Fixed a persistent crash on save load with the Nullius mod, sorry about that one
+    - Fixed that certain machines, fuels, belts and train wagons that should be hidden were shown
     - Fixed that the player character would show up as a valid mining machine
     - Fixed a crash when using the utility dialog blueprint functionality with a large subfactory
     - Fixed that the auto-pause logic would touch the pause state in multiplayer when it really shouldn't
